--- a/fetch-commit-version/action.yml
+++ b/fetch-commit-version/action.yml
@@ -1,8 +1,8 @@
-name: 'Promote Version'
+name: 'Fetch commit Version'
 description: >
-  The promote-version component executes the [`commit_version`](../github_semver/commit_version.py) script which 
+  The fetch-commit-version component executes the [`commit_version`](../github_semver/commit_version.py) script which 
   downloads the version artifact from the last successful workflow run for the current commit.
-  The corresponding version is stored as `SEMVER_VERSION` environment variable and set as output of this action.
+  The corresponding version is stored as `COMMIT_VERSION` environment variable and set as output of this action.
   This pipeline is supposed to be run for releases only.
   
   The GitHub token needs to have `actions: read` permission to be able to access the workflow runs.
@@ -25,8 +25,8 @@ inputs:
     default: ${{ github.workflow }}
 outputs:
   version:
-    description: 'Retrieved semantic version'
-    value: ${{ steps.promote.outputs.version }}
+    description: 'Retrieved semantic version for commit'
+    value: ${{ steps.fetch-commit-version.outputs.version }}
 runs:
   using: 'composite'
   steps:
@@ -46,8 +46,8 @@ runs:
       run: |
         uv sync --frozen
 
-    - name: Promote version
-      id: promote
+    - name: Fetch commit version
+      id: fetch-commit-version
       shell: bash
       working-directory: ${{ github.action_path }}/..
       env:
@@ -62,7 +62,7 @@ runs:
           echo "Using GITHUB_SHA: $COMMIT_SHA"
         fi
 
-        SEMVER_VERSION=$(uv run python -m github_semver.commit_version --commit-sha1 "$COMMIT_SHA" --artifact-name "${{ inputs.artifact-name }}" --workflow-name "${{ inputs.workflow-name }}")
-        echo "$SEMVER_VERSION" > version
-        echo "version=$SEMVER_VERSION" >> $GITHUB_OUTPUT
-        echo "SEMVER_VERSION=$SEMVER_VERSION" >> $GITHUB_ENV
+        COMMIT_VERSION=$(uv run python -m github_semver.commit_version --commit-sha1 "$COMMIT_SHA" --artifact-name "${{ inputs.artifact-name }}" --workflow-name "${{ inputs.workflow-name }}")
+        echo "$COMMIT_VERSION" > version
+        echo "version=$COMMIT_VERSION" >> $GITHUB_OUTPUT
+        echo "COMMIT_VERSION=$COMMIT_VERSION" >> $GITHUB_ENV
