--- a/fetch-commit-version/action.yml
+++ b/fetch-commit-version/action.yml
@@ -46,19 +46,24 @@ runs:
     run: |
       uv sync --frozen
 
-  - name: Determine commit SHA
-    id: commit-sha
+  - name: 🔍 Determine commit SHA and branch
+    id: metadata
     shell: bash
     run: |
       # Determine the correct commit SHA based on the event type
       if [[ "${{ github.event_name }}" == "pull_request" ]]; then
         COMMIT_SHA="${{ github.event.pull_request.head.sha }}"
+        BRANCH_NAME="${{ github.head_ref }}"
         echo "Using PR head SHA: $COMMIT_SHA"
+        echo "Using PR head ref: $BRANCH_NAME"
       else
         COMMIT_SHA="${GITHUB_SHA}"
+        BRANCH_NAME="${{ github.ref_name }}"
         echo "Using GITHUB_SHA: $COMMIT_SHA"
+        echo "Using ref name: $BRANCH_NAME"
       fi
       echo "sha=$COMMIT_SHA" >> $GITHUB_OUTPUT
+      echo "branch=$BRANCH_NAME" >> $GITHUB_OUTPUT
 
   - name: Fetch commit version
     id: fetch-commit-version
@@ -67,7 +72,7 @@ runs:
     env:
       GITHUB_TOKEN: ${{ inputs.github-token }}
     run: |
-      COMMIT_VERSION=$(uv run python -m github_semver.commit_version --commit-sha "${{ steps.commit-sha.outputs.sha }}" --artifact-name "${{ inputs.artifact-name }}" --workflow-name "${{ inputs.workflow-name }}")
+      COMMIT_VERSION=$(uv run python -m github_semver.commit_version --commit-sha "${{ steps.metadata.outputs.sha }}" --artifact-name "${{ inputs.artifact-name }}" --workflow-name "${{ inputs.workflow-name }}")
       echo "$COMMIT_VERSION" > version
       echo "version=$COMMIT_VERSION" >> $GITHUB_OUTPUT
       echo "COMMIT_VERSION=$COMMIT_VERSION" >> $GITHUB_ENV
@@ -76,7 +81,7 @@ runs:
     shell: bash
     run: |
       # Get short SHA for display
-      COMMIT_SHA="${{ steps.commit-sha.outputs.sha }}"
+      COMMIT_SHA="${{ steps.metadata.outputs.sha }}"
       SHORT_SHA="${COMMIT_SHA:0:8}"
 
       echo "## 🔍 Version Fetch Summary" >> $GITHUB_STEP_SUMMARY
@@ -86,6 +91,7 @@ runs:
       echo "| 📦 **Version** | \`${{ env.COMMIT_VERSION }}\` |" >> $GITHUB_STEP_SUMMARY
       echo "| 🏷️ **Artifact** | \`${{ inputs.artifact-name }}\` |" >> $GITHUB_STEP_SUMMARY
       echo "| 🔄 **Workflow** | \`${{ inputs.workflow-name }}\` |" >> $GITHUB_STEP_SUMMARY
+      echo "| 🌿 **Branch** | \`${{ steps.metadata.outputs.branch }}\` |" >> $GITHUB_STEP_SUMMARY
       echo "| 📍 **Commit** | \`$SHORT_SHA\` |" >> $GITHUB_STEP_SUMMARY
       echo "" >> $GITHUB_STEP_SUMMARY
       echo "> ✅ **Success!** Version retrieved from previous workflow run" >> $GITHUB_STEP_SUMMARY
