--- a/generate-version/action.yml
+++ b/generate-version/action.yml
@@ -35,20 +35,25 @@ runs:
     run: |
       uv sync --frozen
 
-  - name: 🔍 Determine commit SHA
-    id: commit-sha
+  - name: Determine commit SHA and branch
+    id: metadata
     shell: bash
     run: |
       if [[ -n "${{ github.head_ref }}" ]]; then
-        # This is a pull request - use head SHA
+        # This is a pull request - use head SHA and head ref
         COMMIT_SHA="${{ github.event.pull_request.head.sha }}"
+        BRANCH_NAME="${{ github.head_ref }}"
         echo "Using PR head SHA: $COMMIT_SHA"
+        echo "Using PR head ref: $BRANCH_NAME"
       else
-        # Regular push - use GITHUB_SHA
+        # Regular push - use GITHUB_SHA and ref name
         COMMIT_SHA="${GITHUB_SHA}"
+        BRANCH_NAME="${{ github.ref_name }}"
         echo "Using GITHUB_SHA: $COMMIT_SHA"
+        echo "Using ref name: $BRANCH_NAME"
       fi
       echo "sha=$COMMIT_SHA" >> $GITHUB_OUTPUT
+      echo "branch=$BRANCH_NAME" >> $GITHUB_OUTPUT
 
   - name: Generate version
     id: generate
@@ -84,12 +89,12 @@ runs:
         fi
       else
         # Feature branch - always feature build regardless of RC mode
-        VERSION_TYPE="🔧 **Feature Build**"
+        VERSION_TYPE="**Feature Build**"
         VERSION_DESC="Development version with build metadata"
       fi
 
       # Get short SHA for display
-      COMMIT_SHA="${{ steps.commit-sha.outputs.sha }}"
+      COMMIT_SHA="${{ steps.metadata.outputs.sha }}"
       SHORT_SHA="${COMMIT_SHA:0:8}"
 
       # Determine RC mode status with proper icon
@@ -105,9 +110,8 @@ runs:
       echo "|-------|-------|" >> $GITHUB_STEP_SUMMARY
       echo "| 📦 **Generated Version** | \`${{ env.CHART_VERSION }}\` |" >> $GITHUB_STEP_SUMMARY
       echo "| 🔨 **Build Type** | $VERSION_TYPE |" >> $GITHUB_STEP_SUMMARY
-      echo "| 🌿 **Branch** | \`${{ github.ref_name }}\` |" >> $GITHUB_STEP_SUMMARY
+      echo "| 🌿 **Branch** | \`${{ steps.metadata.outputs.branch }}\` |" >> $GITHUB_STEP_SUMMARY
       echo "| 📍 **Commit** | \`$SHORT_SHA\` |" >> $GITHUB_STEP_SUMMARY
-      echo "| 🐍 **Python** | \`${{ inputs.python-version }}\` |" >> $GITHUB_STEP_SUMMARY
       echo "| 🚦 **RC Mode** | $RC_STATUS |" >> $GITHUB_STEP_SUMMARY
       echo "" >> $GITHUB_STEP_SUMMARY
       echo "> 🎉 **$VERSION_DESC** generated successfully!" >> $GITHUB_STEP_SUMMARY
