--- a/generate-version/action.yml
+++ b/generate-version/action.yml
@@ -102,7 +102,7 @@ runs:
       echo "| Field | Value |" >> $GITHUB_STEP_SUMMARY
       echo "|-------|-------|" >> $GITHUB_STEP_SUMMARY
       echo "| 📦 **Generated Version** | \`${{ env.CHART_VERSION }}\` |" >> $GITHUB_STEP_SUMMARY
-      echo "| 🔨 **Build Type** | $VERSION_TYPE |" >> $GITHUB_STEP_SUMMARY
+      echo "| 🔨 **Version Type** | $VERSION_TYPE |" >> $GITHUB_STEP_SUMMARY
       echo "| 🌿 **Branch** | \`${{ steps.metadata.outputs.branch }}\` |" >> $GITHUB_STEP_SUMMARY
       echo "| 📍 **Commit** | \`$SHORT_SHA\` |" >> $GITHUB_STEP_SUMMARY
       echo "" >> $GITHUB_STEP_SUMMARY
