--- a/generate-version/action.yml
+++ b/generate-version/action.yml
@@ -16,6 +16,7 @@ outputs:
   version:
     description: 'Generated semantic version'
     value: ${{ steps.generate-version.outputs.version }}
+
 runs:
   using: 'composite'
   steps:
@@ -27,7 +28,7 @@ runs:
   - name: Install UV
     uses: astral-sh/setup-uv@v4
     with:
-      enable-cache: true
+      enable-cache: false # The UV lock file cannot be resolved when this action is included from another repository
 
   - name: Install dependencies
     shell: bash
