--- a/fetch-commit-version/action.yml
+++ b/fetch-commit-version/action.yml
@@ -59,11 +59,10 @@ runs:
   - name: Fetch commit version
     id: fetch-commit-version
     shell: bash
-    working-directory: ${{ github.action_path }}/..
     env:
       GITHUB_TOKEN: ${{ inputs.github-token }}
     run: |
-      COMMIT_VERSION=$(uv run python -m github_semver.commit_version --commit-sha "${{ steps.commit-sha.outputs.sha }}" --artifact-name "${{ inputs.artifact-name }}" --workflow-name "${{ inputs.workflow-name }}")
+      COMMIT_VERSION=$(uv run --project ${{ github.action_path }}/.. python -m github_semver.commit_version --commit-sha "${{ steps.commit-sha.outputs.sha }}" --artifact-name "${{ inputs.artifact-name }}" --workflow-name "${{ inputs.workflow-name }}")
       echo "$COMMIT_VERSION" > version
       echo "version=$COMMIT_VERSION" >> $GITHUB_OUTPUT
       echo "COMMIT_VERSION=$COMMIT_VERSION" >> $GITHUB_ENV
