--- a/fetch-commit-version/action.yml
+++ b/fetch-commit-version/action.yml
@@ -44,7 +44,7 @@ runs:
   - name: Install UV
     uses: astral-sh/setup-uv@557e51de59eb14aaaba2ed9621916900a91d50c6 # v6.6.1
     with:
-      enable-cache: true
+      enable-cache: false
 
   - name: Install dependencies
     shell: bash
